traefik-ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    name: frontend
spec:
  rules:
  - host: app.20.207.122.241.nip.io
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 3000
      - path: "/api"
        pathType: Prefix
        backend: 
          service:
            name: api
            port:
              number: 8080
